samples/_failures_safe/1761287657_f52403_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65e60a3a.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_65e60a3a.c:172:14: error: ‘TOKEN’ undeclared (first use in this function)
  172 |         case TOKEN
      |              ^~~~~
./samples/SAFE/__tmp_65e60a3a.c:172:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_65e60a3a.c:172:9: error: expected ‘:’ or ‘...’ at end of input
  172 |         case TOKEN
      |         ^~~~
./samples/SAFE/__tmp_65e60a3a.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_65e60a3a.c:172:9: error: expected declaration or statement at end of input
